# FBUS-EKF

./: README.md
C++/: CMakeLists.txt
C++/config/: arucoConfig.yml  camerainfo.yml  camerainfo1.yml  camerainfoOnboard.yml  ekfparam.yml  markersetup.yml  paramconfig.yml  refractinfo.yml
C++/include/: GlogHelper.hpp  common.hpp  filter.hpp  imu_data_generator.hpp  matrix_math.hpp  vision.hpp  visualizer.hpp  yaml_eigen_converter.hpp
C++/src/: CMakeLists.txt  GlogHelper.cpp  filter.cpp  main.cpp  vision.cpp  visualizer.cpp
C++/utils/: CMakeLists.txt  calibrate_camera.cpp  record_video.cpp  take_photo.cpp  test.cpp  testEigen.cpp  testFisheye.cpp  testYaml.cpp
matlab/: ComputeVisionOnlyResults.m  FBUS_EKF.m  GetMarkerMap.m  ImuUpdate.m  InitGravityAndGyrobias.m  InitPositionAndQuaternion.m  MeasureUpdate.m  PlotState.m  ResetState.m  axisangle_to_quaternion.m  quaternion_add.m  quaternion_conjugate.m  quaternion_left_product_matrix.m  quaternion_normalize.m  quaternion_right_product_matrix.m  quaternion_to_axisangle.m  quaternion_to_eulerangle.m  quaternion_to_rotmat.m  rotmat_to_quaternion.m  vector_to_crossmat.m
matlab/config/: camerainfo.yml
matlab/dataset/landdata/dataset-02/: corners.txt  fusion.txt  image.txt  imu.txt
matlab/dataset/waterdata/dataset-06/: corners.txt  fusion.txt  image.txt  imu.txt
